# btcnew-node

./: .gitignore  BitcoinNew.icns  BitcoinNew.rc  CMakeLists.txt  Info.plist.in  README.md  appveyor.yml  btcnew.spec.in  doxygen.config  nanocurrency-beta.spec.in
btcnew-pow-server/: .clang-format.base  .travis.yml  CMakeLists.txt  LICENSE  README.md
btcnew-pow-server/ci/: travis-deploy.sh
btcnew-pow-server/public/: app_queue.js  index.html
btcnew/btcnew_node/: CMakeLists.txt  daemon.cpp  daemon.hpp  entry.cpp
btcnew/btcnew_rpc/: CMakeLists.txt  entry.cpp
btcnew/btcnew_wallet/: entry.cpp  entry_com.cpp  icon.hpp
btcnew/core_test/: active_transactions.cpp  block.cpp  block_store.cpp  bootstrap.cpp  confirmation_height.cpp  conflicts.cpp  core_test_main.cc  difficulty.cpp  distributed_work.cpp  epochs.cpp  gap_cache.cpp  ipc.cpp  ledger.cpp  locks.cpp  logger.cpp  memory_pool.cpp  message.cpp  message_parser.cpp  network.cpp  node.cpp  peer_container.cpp  processor_service.cpp  signing.cpp  socket.cpp  testutil.hpp  timer.cpp  toml.cpp  uint256_union.cpp  utility.cpp  versioning.cpp  wallet.cpp  wallets.cpp  websocket.cpp  work_pool.cpp
btcnew/crypto_lib/: interface.cpp  random_pool.cpp  random_pool.hpp
btcnew/lib/: CMakeLists.txt  alarm.cpp  alarm.hpp  asio.cpp  asio.hpp  blockbuilders.cpp  blockbuilders.hpp  blocks.cpp  blocks.hpp  config.cpp  config.hpp  configbase.hpp  errors.cpp  ipc.cpp  (+32 more)
ci/: build-centos.sh  build-deploy.sh  build-gitlab.sh  build-travis.sh  deploy-docker.sh  record_rep_weights.py
util/: changelog_generator  deploy.sh  makesrc  run.sh
(+177 files in other folders)
